--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/three": "^0.179.0",
     "lucide-react": "^0.534.0",
     "mapbox-gl": "^3.14.0",
+    "mapbox-gl-threelayer": "^0.0.3",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-map-gl": "^7.1.9",
-    "three": "^0.179.1"
+    "three": "^0.179.1",
+    "threebox-plugin": "^2.2.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -23,7 +26,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/three": "^0.179.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
