--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-map-gl": "^7.1.9",
-    "three": "^0.179.1"
+    "three": "^0.179.1",
+    "threebox-plugin": "^2.2.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
